--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@openzeppelin/contracts": "^4.8.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "dotenv": "^16.0.3",
-    "ethers": "^5.7.2"
+    "ethers": "^5.7.2",
+    "hardhat": "^2.13.1"
   }
 }
